fixed horizontal scroll bar

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
     font-family: "Maven Pro", sans-serif;
+    overflow-x: hidden;
   }
   html {
     scroll-behavior: smooth;
